infrastructure/k8s/ws-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ws-backend
  name: ws-backend
  namespace: sketchxpad
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ws-backend
  template:
    metadata:
      labels:
        app: ws-backend
    spec:
      containers:
        - image: sketchxpad-ws-backend:latest
          name: ws-backend
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ws-backend
  name: ws-backend
  namespace: sketchxpad
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ws-backend
  type: ClusterIP
